--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hrtime-utils",
-  "version": "1.0.0-0",
+  "version": "1.0.0",
   "description": "A small collection of useful functions to work with Node.js `process.hrtime` values",
   "main": "index.js",
   "scripts": {
