--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "test": "npm run lint && tap test.js --100",
     "test:ci": "npm run test -- --cov --coverage-report=lcovonly",
     "doc": "markdown-toc -i README.md",
-    "prerelease": "npm run doc && npm cit",
+    "prerelease": "npm run doc && npm cit && git add -u",
     "release": "standard-version",
+    "version": "echo \"version\"",
     "postrelease": "npm run push && npm publish",
     "push": "git push origin --follow-tags `git rev-parse --abbrev-ref HEAD`"
   },
