--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard | snazzy",
-    "test": "npm run lint && tap test.js --100",
+    "test": "npm run lint && tap test.js",
     "test:ci": "npm run test -- --cov --coverage-report=lcovonly",
     "doc": "markdown-toc -i README.md",
     "prerelease": "npm cit",
