--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/dnlup/hrtime-utils#readme",
   "devDependencies": {
     "atomic-sleep": "^1.0.0",
+    "husky": "^4.3.0",
     "markdown-toc": "^1.2.0",
     "snazzy": "^9.0.0",
     "standard": "^16.0.0",
