--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "atomic-sleep": "^1.0.0",
     "husky": "^4.3.0",
+    "lint-staged": "^10.5.3",
     "markdown-toc": "^1.2.0",
     "snazzy": "^9.0.0",
     "standard": "^16.0.0",
