--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard | snazzy",
-    "test": "npm run lint && tap test.js",
+    "lint:fix": "standard --fix --verbose | snazzy",
+    "test": "tap test.js",
     "test:ci": "npm run test -- --cov --coverage-report=lcovonly",
     "doc": "markdown-toc -i README.md",
-    "prerelease": "npm cit",
+    "prerelease": "npm ci && npm run lint && npm test",
     "release": "standard-version",
     "postrelease": "npm run push && npm publish",
     "push": "git push origin --follow-tags `git rev-parse --abbrev-ref HEAD`"
