--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "test": "tap test.js",
     "test:ci": "npm run test -- --cov --coverage-report=lcovonly",
     "doc": "markdown-toc -i README.md",
-    "prerelease": "npm ci && npm run lint && npm test",
-    "release": "standard-version",
+    "prerelease": "npm cit",
+    "release": "HUSKY=0 standard-version",
     "postrelease": "npm run push && npm publish",
-    "push": "git push origin --follow-tags `git rev-parse --abbrev-ref HEAD`"
+    "prenext": "npm cit",
+    "next": "HUSKY=0 standard-version --prerelease",
+    "postnext": "npm run push && npm publish --tag next",
+    "push": "git push origin --follow-tags `git rev-parse --abbrev-ref HEAD`",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
